[project]
name = "portrait-blur-arena"
version = "0.1.0"
description = "Portrait background blur comparing BiRefNet and SAM3 segmentation models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "ben2",
    "clip",
    "einops",
    "huggingface-hub>=1.4.1",
    "kornia",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "streamlit>=1.54.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.40.0",
    "ultralytics>=8.4.14",
]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git" }
ben2 = { git = "https://github.com/PramaLLC/BEN2.git" }
